# latifa

./: README.md
client/: Cargo.toml
client/src/: lib.rs  main.rs
flutter/: keys.json  pubspec.yaml
flutter/lib/: bridge_definitions.dart  bridge_generated.dart  main.dart
flutter/native/: .gitignore  Cargo.toml  auth
flutter/native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
flutter/native/src/api/: auth.rs  handshake.rs
server/: config.yml  go.mod  go.sum  latifa.go  main.go
server/cmd/: root.go
server/config/: config.go
server/entity/: file.go  key.go  request.go  token.go  user.go
server/mongodb/: mongodb.go
server/router/: errors.go  middleware.go  router.go  router_auth.go  router_download.go  router_file.go  router_handshake.go  router_request.go  router_upload.go
